--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 	        <goal>copy-resources</goal>
 	      </goals>
 	      <configuration>
-	        <outputDirectory>${basedir}/target</outputDirectory>
+	        <outputDirectory>${basedir}/target/classes</outputDirectory>
 	        <resources>          
 	          <resource>
 	            <directory>src/main/resources</directory>
