--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
     <jacoco.version>0.8.4</jacoco.version>
     <junit.version>4.12</junit.version>
   </properties>
@@ -104,7 +104,15 @@
                <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
            </systemPropertyVariables>
        </configuration>
-   </plugin>  
+   </plugin>
+     <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-compiler-plugin</artifactId>
+         <configuration>
+             <source>11</source>
+             <target>11</target>
+         </configuration>
+     </plugin>
  </plugins>  
 </build>  
 </project>
